samples/_failures_safe/1761449209_011116_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2dbf22d4.c: In function ‘main’:
./samples/SAFE/__tmp_2dbf22d4.c:159:17: error: expected expression at end of input
  159 |                 } else
      |                 ^
./samples/SAFE/__tmp_2dbf22d4.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2dbf22d4.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2dbf22d4.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2dbf22d4.c:159:17: error: expected declaration or statement at end of input
